add products page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
+    "react-spring": "^8.0.27",
     "react-tiny-fab": "^3.2.0",
     "reactstrap": "8.2.0",
     "uuid": "^3.2.1"
