--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
@@ -13,6 +14,7 @@
 
 # misc
 .vscode
+server
 .DS_Store
 .env.local
 .env.development.local
